--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Мобильное приложение - Пинк1</h1>
+      <h1 class="visually-hidden">Мобильное приложение - Пинк</h1>
       <section class="device">
         <div class="device__wrapper">
           <h2 class="visually-hidden">Предложения от девайса</h2>
